--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <li><a href="/research.html">Research</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
   <li><a href="/contact.html">Contact</a></li>
-  <li><a href="/job_market.html" class="special-tab"><b>Job Market Info</b></a></li>
+<!--   <li><a href="/job_market.html" class="special-tab"><b>Job Market Info</b></a></li> -->
   </ul>
     <hr/>
     </nav>
@@ -76,9 +76,9 @@
 	<p> My research is on <span><b>applied microeconomics</b></span>. I am interested in the quantitative modeling of personal attributes within family dynamics, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of external shocks on labor markets and their implications for household behavior. To investigate these topics, I use methods ranging from structural econometrics to causal inference.</p>
         
 
-	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a>, <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>, and <a class="two" href="https://gaston-fernandez.github.io/job_market.html" target="_blank"><b>additional Job Market information</b></a>. </span></p>
+	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a> and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span></p>
 
-	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>.</p>	
+	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>. RePEc Top Young Economists Ranking  <a class="two" href="https://ideas.repec.org/top/top.young.html"  target="_blank"><b>here</b></a></p>.	
 	
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
 	
