--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
 	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a> and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span></p>
 
-	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>. RePEc Top Young Economists Ranking  <a class="two" href="https://ideas.repec.org/top/top.young.html"  target="_blank"><b>here</b></a></p>.	
+	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>. </p>
+
+	<p> RePEc Top Young Economists Ranking  <a class="two" href="https://ideas.repec.org/top/top.young.html"  target="_blank"><b>here</b></a>.</p>
 	
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
 	
