--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@ function toggleAbstract(abstractId) {
   <li><a href="/research.html">Research</a></li>
   <li><a href="/teaching.html">Teaching</a></li>
   <li><a href="/contact.html">Contact</a></li>
-  <li><a href="/job_market.html" class="special-tab"><b>Job Market Info</b></a></li>
+<!--   <li><a href="/job_market.html" class="special-tab"><b>Job Market Info</b></a></li> -->
   </ul>
     <hr/>
     </nav>
