--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <h1>Gastón P. Fernández</h1>
 
 	<p>
-	I am a Ph.D. candidate at the Economics Department of <a class="two" href="https://feb.kuleuven.be/research/economics/PHD/jobmarket" target="_blank"><span><b>KU Leuven</b></span></a>. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. During 2024, I visited the Department of Econometrics & Operations Research at Tilburg University, hosted by <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>.  </p>
+	I am a Ph.D. candidate at the Economics Department of KU Leuven. My advisors are <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. During 2024, I visited the Department of Econometrics & Operations Research at Tilburg University, hosted by <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>.  </p>
 	 
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 
