--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<p> My research lies in the fields of <span><b>household economics</b></span>, <span><b>child development</b></span>, and <span><b>technological change and innovation</b></span>.</p>
 <!-- 	I am interested in the quantitative modeling of personal attributes within family dynamics, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of external shocks on labor markets and their implications for household behavior. To investigate these topics, I use methods ranging from structural econometrics to causal inference. -->
 
-	<p> I will join the <span><b>Luxembourg Institute of Social and Economic Research</b></span> as a Research Associate in Fall 2025.</p>
+	<p> I will join the <span><b>Luxembourg Institute of Socio-Economic Research (LISER)</b></span> as a Research Associate in Fall 2025.</p>
 	
 	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a> and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span></p>
 
