--- a/research.html
+++ b/research.html
@@ -104,16 +104,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (<em>including completed working papers</em>)</div></span></h2>
 
 
-<p> 	
-<strong>Parental personality and child skills formation</strong><br>
-<span style="color: crimson;"> <strong> [Job Market Paper]</strong></span><br>	
-<em> <span style="font-size: 80%;"> Presented at: TSE Economics of Education Workshop 2024, New Advances in Family Economics Workshop (poster) 2024, AFÉPOP 2024, Tilburg Structural Econometrics Seminar 2024, LEER 2024, Leuven Applied Micro Workshop 2024, Household Economics Gathering 2024</span></em><br>
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · <a class="two" href="/files/JMPGFernandez.pdf" target="_blank">Working paper</a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a> · <a class="two" href="https://x.com/GastFernandezB/status/1859543099720049013" target="_blank">X thread</a> </span><br>
-<div id="abstract6" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development. I exploit detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements on parental personality, children’s skills, wages, and time-use decisions. The empirical results suggest a systematic gap in cognitive and non-cognitive skills between children of parents with different personalities. This skills gap increases as children grow older and remains significant after accounting for traditional family attributes. To provide a rationale for these observed patterns, I estimate a life cycle model that incorporates parental personality and considers household decisions with endogenous formation for a child’s cognitive and non-cognitive skills. In this framework, parental personality affects the monetary and time inputs in children as well as the type of interactions between parents and children. The simulations indicate that most of the influence of personality on a child’s skills is through its effect on the quality of parent-child interactions. Also, cash transfer policies that do not account for the productivity associated with parental personality can have unexpected, negative effects on child development. </div>	
-</p>
-<hr class="publication-divider">
 
-	
 <p> 	
 <strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
@@ -134,6 +125,18 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 </p>
 <hr class="publication-divider">
 
+
+<p> 	
+<strong>Parental personality and child skills formation</strong><br>
+<span style="color: crimson;"> <strong> [Job Market Paper]</strong></span><br>	
+<em> <span style="font-size: 80%;"> Presented at: TSE Economics of Education Workshop 2024, New Advances in Family Economics Workshop (poster) 2024, AFÉPOP 2024, Tilburg Structural Econometrics Seminar 2024, LEER 2024, Leuven Applied Micro Workshop 2024, Household Economics Gathering 2024</span></em><br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a> · <a class="two" href="https://x.com/GastFernandezB/status/1859543099720049013" target="_blank">X thread</a> · Draft soon </span><br>
+<div id="abstract6" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development. I exploit detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements on parental personality, children’s skills, wages, and time-use decisions. The empirical results suggest a systematic gap in cognitive and non-cognitive skills between children of parents with different personalities. This skills gap increases as children grow older and remains significant after accounting for traditional family attributes. To provide a rationale for these observed patterns, I estimate a life cycle model that incorporates parental personality and considers household decisions with endogenous formation for a child’s cognitive and non-cognitive skills. In this framework, parental personality affects the monetary and time inputs in children as well as the type of interactions between parents and children. The simulations indicate that most of the influence of personality on a child’s skills is through its effect on the quality of parent-child interactions. Also, cash transfer policies that do not account for the productivity associated with parental personality can have unexpected, negative effects on child development. </div>	
+</p>
+<hr class="publication-divider">
+
+
+	
 <p> 	
 <strong>What explains the gains from a stable marriage? A revealed preference analysis</strong><br>
 Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a><br>		
