--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
 	<p> I will join the <span><b>Luxembourg Institute of Socio-Economic Research (LISER)</b></span> as a Research Associate in Fall 2025.</p>
 	
-	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a> and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span></p>
-
+	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a></p>
+<!--  and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span> -->
 	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>. </p>
 
 	<p> Contact:  <b><a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be </b></a> </p>	
