--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@ function toggleAbstract(abstractId) {
     </nav>
 
   <!-- Insert your research content here -->
-<h2 id="publications">Publications:<span><div class="subheading"> (<em>including accepted/forthcoming papers</em>)</div></span></h2>
+<h2 id="publications">Publications:<span><div class="subheading"> (including accepted/forthcoming papers)</div></span></h2>
 
 <p> 	
 <div class="pubthumb">
