--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 </br>
 </br> 
-<h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (<em>including completed working papers</em>)</div></span></h2>
+<h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (including completed working papers)</div></span></h2>
 
 
 
