--- a/index.html
+++ b/index.html
@@ -64,15 +64,14 @@
 <div class="content-area">	
 <h1>Gastón P. Fernández</h1>
 
-	<p>
-	I am a Research Associate at the <span><b>Luxembourg Institute of Socio-Economic Research (LISER)</b></span>.
+	<p> I am a Research Associate at the <span><b>Luxembourg Institute of Socio-Economic Research (LISER)</b></span>.</p>
 		
-	I obtained a PhD in Economics from <span><b>KU Leuven</b></span> in 2025 under the supervision of <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. During 2024, I visited the Department of Econometrics & Operations Research at Tilburg University, hosted by <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>.  </p>
+	<p> I obtained a PhD in Economics from <span><b>KU Leuven</b></span> in 2025 under the supervision of <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank"><span><b>Laurens Cherchye</b></span></a> and <a class="two" href="https://sites.google.com/site/fmpvermeulen/home?authuser=0" target="_blank"><span><b>Frederic Vermeulen</b></span></a>. During 2024, I visited the Department of Econometrics & Operations Research at Tilburg University, hosted by <a class="two" href="https://www.theloudis.net/" target="_blank"><span><b>Alex Theloudis</b></span></a>.  </p>
 	 
        <!--  <p> My research is in applied microeconomics with a special emphasis on the fields of <span><b>Family Economics</b></span> and <span><b>Child Development</b></span>. I am also interested in studying the impact of <span><b>Technological Change</b></span> on labor markets and firms’ behavior.</p>-->
 	<p> My research lies in the fields of <span><b>household economics</b></span>, <span><b>child development</b></span>, and <span><b>technological change and innovation</b></span>.</p>
 <!-- 	I am interested in the quantitative modeling of personal attributes within family dynamics, including resource allocation, skills formation, and marriage market outcomes. I also study the impact of external shocks on labor markets and their implications for household behavior. To investigate these topics, I use methods ranging from structural econometrics to causal inference. -->
-	<p>Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a></p>
+	<p> Check out my <a class="two" href="https://gaston-fernandez.github.io/files/CV_GastonFernandezBarros.pdf"  target="_blank"><b>CV</b></a></p>
 <!--  and <span><a class="two" href="/files/JMPGFernandez.pdf"  target="_blank"><b>Job Market Paper</b></a>. </span> -->
 	<p> Google Scholar citations <a class="two" href="https://scholar.google.com/citations?user=I0oFwVgAAAAJ&hl=en&oi=ao"  target="_blank"><b>here</b></a>. </p>
 
