--- a/research.html
+++ b/research.html
@@ -104,26 +104,35 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (including completed working papers)</div></span></h2>
 
 
+<p> 	
+<strong>Evidence on firm adoption of artificial intelligence</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
+<em><span style="font-size: 80%;"> In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm</span> </em><br>
+<span style="font-size: 80%;">Draft soon </a> </span>
+<span style="font-size: 90%;" id="petite-caps"><strong>Status: Submitted to editors</strong> </span> 
+</p>		
+<hr class="publication-divider">	
+
+
+<p> 	
+<strong>Personality traits, the marriage market, and household behavior</strong><br>
+Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
+<em><span style="font-size: 80%;"> Presented at: SEHO 2025, AFÉPOP 2024, SES 2024, Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023</span>  </em><br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract5')">Abstract</a> · <a class="two" href="files/20241031_working_paper_v1.pdf" target="_blank">Working paper</a> </span>
+<div id="abstract5" style="display:none; font-size: 80%;">We develop an empirical framework to analyze the dynamic effect of personality traits in marriage market patterns and intrahousehold decisions. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personality traits (as measured by the Big Five). First, we document that personality types are related to marital and divorce patterns, time allocated to both market and non-market labor activities, and the evolution of earnings. To rationalize these empirical facts, we build a life-cycle model that integrates endogenous household formation and collective household choices under limited commitment. Our framework allows personality to affect both wage processes and individual preferences. In the latter, personality traits enter indirectly through household production and the utility of marriage (match quality). We use the estimates of our model to conduct counterfactuals associated with intrahousehold behavior.</div>	
+</p>
+<hr class="publication-divider">
 
 <p> 	
 <strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em><span style="font-size: 80%;"> Presented at: CISS 2023 </span> </em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> </span><br>
-<span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted</strong> </span> 
+<!-- <span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted</strong> </span>  -->
 <div id="abstract4" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is considered to be the next general-purpose technology, with the potential of performing tasks commonly requiring human capabilities. While it is commonly feared that AI replaces labor and disrupts jobs, we instead investigate the potential of AI for overcoming increasingly alarming skills shortages in firms. We exploit unique German survey data from the Mannheim Innovation Panel on both the adoption of AI and the extent to which firms experience scarcity of skills. We measure skills shortage by the number of job vacancies that could not be filled as planned by firms, distinguishing among different types of skills. To account for the potential endogeneity of skills shortage, we also implement instrumental variable estimators. Overall, we find a positive and significant effect of skills shortage on AI adoption, the breadth of AI methods, and the breadth of areas of application of AI. In addition, we find evidence that scarcity of labor with academic education relates to firms exploring and adopting AI.</div>	
 </p>
 <hr class="publication-divider">
 	
-<p> 	
-<strong>Personality traits, the marriage market, and household behavior</strong><br>
-Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
-<em><span style="font-size: 80%;"> Presented at: AFÉPOP 2024, SES 2024, Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023</span>  </em><br>
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract5')">Abstract</a> · <a class="two" href="files/20241031_working_paper_v1.pdf" target="_blank">Working paper</a> </span>
-<div id="abstract5" style="display:none; font-size: 80%;">We develop an empirical framework to analyze the dynamic effect of personality traits in marriage market patterns and intrahousehold decisions. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personality traits (as measured by the Big Five). First, we document that personality types are related to marital and divorce patterns, time allocated to both market and non-market labor activities, and the evolution of earnings. To rationalize these empirical facts, we build a life-cycle model that integrates endogenous household formation and collective household choices under limited commitment. Our framework allows personality to affect both wage processes and individual preferences. In the latter, personality traits enter indirectly through household production and the utility of marriage (match quality). We use the estimates of our model to conduct counterfactuals associated with intrahousehold behavior.</div>	
-</p>
-<hr class="publication-divider">
-
 <p> 	
 <strong>Parental personality and child skills formation</strong><br>
 <span style="color: crimson;"> <strong> [Job Market Paper]</strong></span><br>	
@@ -155,13 +164,6 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1
 </p>	
 <hr class="publication-divider">
 
-<p> 	
-<strong>Evidence on firm adoption of artificial intelligence</strong><br>
-Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
-<em><span style="font-size: 80%;"> In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm</span> </em><br>
-<span style="font-size: 80%;">Draft soon </a> </span>
-</p>		
-<hr class="publication-divider">	
 
 	
 </br>
