--- a/research.html
+++ b/research.html
@@ -105,11 +105,11 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 
 <p> 	
-<strong>Evidence on firm adoption of artificial intelligence</strong><br>
+<strong>Adoption of AI by Firms: Determinants and Impacts</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
 <em><span style="font-size: 80%;"> In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm</span> </em><br>
-<span style="font-size: 80%;">Draft soon </a> </span>
-<span style="font-size: 90%;" id="petite-caps"><strong>Status: Submitted to editors</strong> </span> 
+<span style="font-size: 80%;">Draft soon </a> </span><br>
+<span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted to editors</strong> </span> 
 </p>		
 <hr class="publication-divider">	
 
