Update title of AI adoption evidence paper

--- a/research.html
+++ b/research.html
@@ -124,7 +124,7 @@ Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" targe
 <hr class="publication-divider">
 
 <p> 	
-<strong>Evidence on the adoption of artificial intelligence: the role of skills shortage in German firms</strong><br>
+<strong>Evidence on the adoption of artificial intelligence: the role of skills shortage</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
 <em><span style="font-size: 80%;"> Presented at: CISS 2023 </span> </em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> </span><br>
