--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 </br>
 </br> 
-<h2 id="work-in-progress">Work in progress: <span><div class="subheading"> (including completed working papers)</div></span></h2>
+<h2 id="work-in-progress">Working papers:</h2>
 
 
 <p> 	
@@ -115,27 +115,32 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 
 
 <p> 	
+<strong>Evidence on the adoption of artificial intelligence: the role of skills shortage</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
+<em><span style="font-size: 80%;"> Presented at: CISS 2023 </span> </em><br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> </span><br>
+<span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted</strong> </span> 
+<div id="abstract4" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is considered to be the next general-purpose technology, with the potential of performing tasks commonly requiring human capabilities. While it is commonly feared that AI replaces labor and disrupts jobs, we instead investigate the potential of AI for overcoming increasingly alarming skills shortages in firms. We exploit unique German survey data from the Mannheim Innovation Panel on both the adoption of AI and the extent to which firms experience scarcity of skills. We measure skills shortage by the number of job vacancies that could not be filled as planned by firms, distinguishing among different types of skills. To account for the potential endogeneity of skills shortage, we also implement instrumental variable estimators. Overall, we find a positive and significant effect of skills shortage on AI adoption, the breadth of AI methods, and the breadth of areas of application of AI. In addition, we find evidence that scarcity of labor with academic education relates to firms exploring and adopting AI.</div>	
+</p>
+<hr class="publication-divider">
+
+<p> 	
 <strong>Personality traits, the marriage market, and household behavior</strong><br>
 Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
-<em><span style="font-size: 80%;"> Presented at: SEHO 2025, AFÉPOP 2024, SES 2024, Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023</span>  </em><br>
+<em><span style="font-size: 80%;"> Presented at: Luxembourg 2025, SEHO 2025, AFÉPOP 2024, SES 2024, Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023</span>  </em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract5')">Abstract</a> · <a class="two" href="files/20241031_working_paper_v1.pdf" target="_blank">Working paper</a> </span>
 <div id="abstract5" style="display:none; font-size: 80%;">We develop an empirical framework to analyze the dynamic effect of personality traits in marriage market patterns and intrahousehold decisions. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personality traits (as measured by the Big Five). First, we document that personality types are related to marital and divorce patterns, time allocated to both market and non-market labor activities, and the evolution of earnings. To rationalize these empirical facts, we build a life-cycle model that integrates endogenous household formation and collective household choices under limited commitment. Our framework allows personality to affect both wage processes and individual preferences. In the latter, personality traits enter indirectly through household production and the utility of marriage (match quality). We use the estimates of our model to conduct counterfactuals associated with intrahousehold behavior.</div>	
 </p>
 <hr class="publication-divider">
 
-<p> 	
-<strong>Evidence on the adoption of artificial intelligence: the role of skills shortage</strong><br>
-Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://www.kuleuven.be/wieiswie/en/person/00144520" target="_blank">Paolo Carioli</a> <br>	
-<em><span style="font-size: 80%;"> Presented at: CISS 2023 </span> </em><br>
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract4')">Abstract</a> · <a class="two" href="/files/MSI_2402.pdf" target="_blank">Working paper</a> </span><br>
-<!-- <span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted</strong> </span>  -->
-<div id="abstract4" style="display:none; font-size: 80%;">Artificial Intelligence (AI) is considered to be the next general-purpose technology, with the potential of performing tasks commonly requiring human capabilities. While it is commonly feared that AI replaces labor and disrupts jobs, we instead investigate the potential of AI for overcoming increasingly alarming skills shortages in firms. We exploit unique German survey data from the Mannheim Innovation Panel on both the adoption of AI and the extent to which firms experience scarcity of skills. We measure skills shortage by the number of job vacancies that could not be filled as planned by firms, distinguishing among different types of skills. To account for the potential endogeneity of skills shortage, we also implement instrumental variable estimators. Overall, we find a positive and significant effect of skills shortage on AI adoption, the breadth of AI methods, and the breadth of areas of application of AI. In addition, we find evidence that scarcity of labor with academic education relates to firms exploring and adopting AI.</div>	
-</p>
-<hr class="publication-divider">
 	
+</br>
+</br> 
+<h2 id="work-in-progress">Work in progress:</h2>	
+
 <p> 	
 <strong>Parental personality and child skills formation</strong><br>
-<span style="color: crimson;"> <strong> [Job Market Paper]</strong></span><br>	
+<!-- <span style="color: crimson;"> <strong> [Job Market Paper]</strong></span><br>	 -->
 <em> <span style="font-size: 80%;"> Presented at: TSE Economics of Education Workshop 2024, New Advances in Family Economics Workshop (poster) 2024, AFÉPOP 2024, Tilburg Structural Econometrics Seminar 2024, LEER 2024, Leuven Applied Micro Workshop 2024, Household Economics Gathering 2024</span></em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract6')">Abstract</a> · <a class="two" href="https://www.youtube.com/watch?v=03rwO0EgBSk&t=3s" target="_blank">Watch video</a> · <a class="two" href="https://x.com/GastFernandezB/status/1859543099720049013" target="_blank">X thread</a> · Draft soon </span><br>
 <div id="abstract6" style="display:none; font-size: 80%;">This paper studies the influence of parental personality on child development. I exploit detailed individual-level data from the PSID and its Child Development and Wellbeing Supplements on parental personality, children’s skills, wages, and time-use decisions. The empirical results suggest a systematic gap in cognitive and non-cognitive skills between children of parents with different personalities. This skills gap increases as children grow older and remains significant after accounting for traditional family attributes. To provide a rationale for these observed patterns, I estimate a life cycle model that incorporates parental personality and considers household decisions with endogenous formation for a child’s cognitive and non-cognitive skills. In this framework, parental personality affects the monetary and time inputs in children as well as the type of interactions between parents and children. The simulations indicate that most of the influence of personality on a child’s skills is through its effect on the quality of parent-child interactions. Also, cash transfer policies that do not account for the productivity associated with parental personality can have unexpected, negative effects on child development. </div>	
@@ -143,19 +148,11 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <hr class="publication-divider">
 
 <p> 	
-<strong>What explains the gains from a stable marriage? A revealed preference analysis</strong><br>
-Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a><br>		
-<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract7')">Abstract</a> · Draft soon </a> </span>
-<div id="abstract7" style="display:none; font-size: 80%;">This paper conducts a structural empirical analysis to determine the relative importance of various characteristics in explaining marriage market outcomes over time. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personal attributes. We test for efficient household consumption within stable marriages by applying revealed preference restrictions to our sample. Identifying the intrahousehold decision structure allows us to measure both material and nonmaterial gains from marriage, including the sharing rule, public consumption, and unobserved match quality. We analyze the evolution of these marriage market outcomes over time and assess the explanatory power of individual characteristics that include cognitive skills, noncognitive skills, health status, and several demographics.</div>	
-</p>		
-<hr class="publication-divider">	
-
-<p> 	
-<strong>Technological change and intrahousehold resources allocation</strong><br>
+<strong>Unwanted pregnancies and child development</strong><br>
+Joint with Zhijie Wang, Sisi Zhang</a><br>		
 <span style="font-size: 80%;">Draft soon </a> </span>
-</p>
+</p>	
 <hr class="publication-divider">
-
 	
 <p> 	
 <strong>The arguable evolution of Chilean income inequality</strong><br>
@@ -163,6 +160,36 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=NyyKx1
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>	
 <hr class="publication-divider">
+
+<p> 	
+<strong>Universal basic income and intrahousehold collective behavior</strong><br>
+Joint with <a class="two" href="https://scholar.google.com/citations?user=cQR8M6IAAAAJ&hl=fr" target="_blank">François Maniquet</a><br>		
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>	
+<hr class="publication-divider">
+
+<p> 	
+<strong>Breastfeeding and child development</strong><br>
+Joint with <a class="two" href="https://perseus.iies.su.se/~ialm/" target="_blank">Ingvild Almås</a>, <a class="two" href="https://sites.google.com/yale.edu/costasmeghir/home" target="_blank">Costas Meghir</a><br>		
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>	
+<hr class="publication-divider">	
+		
+<p> 	
+<strong>Technological change and intrahousehold resources allocation</strong><br>
+<span style="font-size: 80%;">Draft soon </a> </span>
+</p>
+<hr class="publication-divider">
+
+<p> 	
+<strong>What explains the gains from a stable marriage? A revealed preference analysis</strong><br>
+Joint with <a class="two" href="https://sites.google.com/site/laurenscherchye/home" target="_blank">Laurens Cherchye</a><br>		
+<!-- <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract7')">Abstract</a> · Draft soon </a> </span> -->
+<!-- <div id="abstract7" style="display:none; font-size: 80%;">This paper conducts a structural empirical analysis to determine the relative importance of various characteristics in explaining marriage market outcomes over time. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personal attributes. We test for efficient household consumption within stable marriages by applying revealed preference restrictions to our sample. Identifying the intrahousehold decision structure allows us to measure both material and nonmaterial gains from marriage, including the sharing rule, public consumption, and unobserved match quality. We analyze the evolution of these marriage market outcomes over time and assess the explanatory power of individual characteristics that include cognitive skills, noncognitive skills, health status, and several demographics.</div>	 -->
+</p>		
+<hr class="publication-divider">	
+	
+	
 
 
 	
