--- a/research.html
+++ b/research.html
@@ -108,8 +108,9 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <strong>Adoption of AI by Firms: Determinants and Impacts</strong><br>
 Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKhUAAAAJ&hl=en&oi=ao" target="_blank">Dirk Czarnitzki</a>, <a class="two" href="https://scholar.google.com/citations?user=IlD-eSgAAAAJ&hl=en" target="_blank">Christian Rammer </a> <br>
 <em><span style="font-size: 80%;"> In preparation for the Edward Elgar 2nd edition of the Handbook on the Economics and Theory of the Firm</span> </em><br>
-<span style="font-size: 80%;">Draft soon </a> </span><br>
+<span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstracthandbook')">Abstract</a> · Draft soon </a> </span><br>
 <span style="font-size: 90%;" id="petite-caps"><strong>Status: submitted to editors</strong> </span> 
+<div id="abstracthandbook" style="display:none; font-size: 80%;">This chapter provides an up-to-date overview of evidence on firms’ adoption of Artificial Intelligence (AI). We revisit the main conceptual drivers of AI uptake discussed in the literature and summarize global trends in AI diffusion. We then examine the firm characteristics associated with adoption—including the distinction between in-house development and external acquisition—and highlight how patterns differ between general AI and generative AI technologies (GenAI). Next, we review the emerging literature on the productivity effects of AI, distinguishing non-experimental firm-level studies from recent experimental and quasi-experimental evidence on task-level impacts. As a case study, we draw on recent firm-level data from Germany to investigate how adoption decisions correlate with firm size, age, R&D intensity, human capital, location, and strategic orientation, and how these patterns vary across stages and types of AI adoption.</div>	
 </p>		
 <hr class="publication-divider">	
 
