Update contact information and email address

--- a/contact.html
+++ b/contact.html
@@ -43,21 +43,21 @@
 
 <p>
 <strong> Postal address:</strong> <br>
-Department of Economics	<br>
-Faculty of Economics and Business <br>
-KU Leuven	<br>
-3000 Leuven, Naamsestraat 69, box 3565	
-Belgium	
+Living Conditions Department	<br>
+Luxembourg Institute of Socio-Economic Research<br>
+L-4366 Esch-sur-Alzette/Belval	<br>
+11, Porte des Sciences, Maison des Sciences Humaines
+Luxembourg
 </p>
-
+    
 <p>
 <strong> Office number:</strong> <br>
-HOG 02.159 	
+128	
 </p>	
 
 <p>
 <strong> E-mail address:</strong> <br>
-<a href="mailto:gfernandez@kuleuven.be">gfernandez@kuleuven.be</a><br>
+<a href="mailto:gaston.fernandez@liser.lu">gaston.fernandez@liser.lu</a><br>
 </p>	
 
 <br>
