Fix formatting of postal address in contact.html

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 Living Conditions Department	<br>
 Luxembourg Institute of Socio-Economic Research<br>
 L-4366 Esch-sur-Alzette/Belval	<br>
-11, Porte des Sciences, Maison des Sciences Humaines
+11, Porte des Sciences, Maison des Sciences Humaines <br>
 Luxembourg
 </p>
     
