Update authorship for breastfeeding research

--- a/research.html
+++ b/research.html
@@ -171,7 +171,7 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=cQR8M6
 
 <p> 	
 <strong>Breastfeeding and child development</strong><br>
-Joint with <a class="two" href="https://perseus.iies.su.se/~ialm/" target="_blank">Ingvild Almås</a>, <a class="two" href="https://sites.google.com/yale.edu/costasmeghir/home" target="_blank">Costas Meghir</a><br>		
+Joint with <a class="two" href="https://perseus.iies.su.se/~ialm/" target="_blank">Ingvild Almås</a>, <a class="two" href="https://www.cmi.no/staff/bet-caeyers" target="_blank">Bet Caeyers</a>,  <a class="two" href="https://sites.google.com/yale.edu/costasmeghir/home" target="_blank">Costas Meghir</a><br>		
 <span style="font-size: 80%;">Draft soon </a> </span>
 </p>	
 <hr class="publication-divider">	
