--- a/research.html
+++ b/research.html
@@ -126,8 +126,9 @@ Joint with <a class="two" href="https://scholar.google.com/citations?user=0_DQKh
 <hr class="publication-divider">
 
 <p> 	
-<strong>Personality traits, the marriage market, and household behavior</strong><br>
+<strong>Personality and the Dynamics of Marriage: A Structural Interpretation</strong><br>
 Joint with <a class="two" href="https://www.mariiakovaleva.com/index.html" target="_blank">Mariia Kovaleva</a><br>	
+<em><span style="font-size: 80%;"> This manuscript supersedes the earlier manuscript "Personality Traits, the Marriage Market, and Household Behavior" </span>  </em><br>
 <em><span style="font-size: 80%;"> Presented at: Luxembourg 2025, SEHO 2025, AFÉPOP 2024, SES 2024, Belgian Day Labour Economists 2023, Workshop on Dynamic Macroeconomics 2023, Household Economics Gathering 2023, ENTER Jamboree 2023</span>  </em><br>
 <span style="font-size: 80%;"><a href="javascript:void(0);" onclick="toggleAbstract('abstract5')">Abstract</a> · <a class="two" href="files/20241031_working_paper_v1.pdf" target="_blank">Working paper</a> </span>
 <div id="abstract5" style="display:none; font-size: 80%;">We develop an empirical framework to analyze the dynamic effect of personality traits in marriage market patterns and intrahousehold decisions. We exploit detailed information at the individual level from the HILDA survey about consumption, labor supply, time use, and personality traits (as measured by the Big Five). First, we document that personality types are related to marital and divorce patterns, time allocated to both market and non-market labor activities, and the evolution of earnings. To rationalize these empirical facts, we build a life-cycle model that integrates endogenous household formation and collective household choices under limited commitment. Our framework allows personality to affect both wage processes and individual preferences. In the latter, personality traits enter indirectly through household production and the utility of marriage (match quality). We use the estimates of our model to conduct counterfactuals associated with intrahousehold behavior.</div>	
